# prompt2reel

./: COLAB.md  README.md  pyproject.toml  requirements.txt
scripts/: colab_setup.sh  setup_wan22.py  setup_wan22.sh
src/prompt2reel/config/: settings.py
src/prompt2reel/core/: prompt_planner.py  story_memory.py  video_generator.py
src/prompt2reel/pipelines/: short_pipeline.py
src/prompt2reel/ui/: colab_app.py
src/prompt2reel/utils/: video_ops.py
tests/: test_memory.py  test_video_generator.py
